--- a/src/index.css
+++ b/src/index.css
@@ -7,17 +7,21 @@
 }
 
 :root {
-  --clr-neutral-900: #1C1C1C;
+  --clr-neutral-900: #000;
+  --clr-neutral-900-50: rgba(0, 0, 0, 0.5);
+  --clr-neutral-800: #1C1C1C;
   --clr-neutral-700: #262626;
   --clr-netural-300: #C7C7C7;
   --clr-netural-100: #FFF;
   --clr-primary: #1AB4E4;
+  --padding: 1rem;
 }
 
 body {
   font-family: 'DM Sans', sans-serif;
-  background-color: var(--clr-neutral-900);
+  background-color: var(--clr-neutral-800);
   color: var(--clr-netural-100);
+  position: relative;
 }
 
 img {
@@ -28,6 +32,8 @@ button,
 a {
   cursor: pointer;
   display: inline-block;
+  text-decoration: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 ul {
