--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@
   --clr-netural-300: #C7C7C7;
   --clr-netural-100: #FFF;
   --clr-primary: #1AB4E4;
+  --clr-primary-75: rgba(26, 181, 228, 0.75);
   --padding: 1rem;
 }
 
