finish mobile auth form styling

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
   --clr-neutral-800: #1C1C1C;
   --clr-neutral-700: #262626;
   --clr-netural-300: #C7C7C7;
+  --clr-netural-300-50: hsla(0, 0%, 78%, 0.5);
   --clr-netural-100: #FFF;
   --clr-primary: #1AB4E4;
   --clr-primary-75: rgba(26, 181, 228, 0.75);
