--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,9 @@
   --clr-netural-100: #FFF;
   --clr-primary: #1AB4E4;
   --clr-primary-75: rgba(26, 181, 228, 0.75);
+
+  --clr-err: rgb(174, 0, 0);
+
   --padding: 1rem;
 }
 
