--- a/src/components/auth/AuthForm.module.css
+++ b/src/components/auth/AuthForm.module.css
@@ -7,7 +7,7 @@
 .form {
     background-color: var(--clr-neutral-700);
     width: 90%;
-    padding: 1rem 1.5rem;
+    padding: 1rem;
     border-radius: 10px;
 }
 
@@ -57,7 +57,7 @@
 }
 
 .mode {
-    margin-top: .35em;
+    margin-top: 1em;
     font-size: .9rem;
     color: var(--clr-primary);
 }
