--- a/src/components/products/ProductItem.module.css
+++ b/src/components/products/ProductItem.module.css
@@ -14,11 +14,15 @@
 
 .name {
     font-size: 1.5rem;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .price {
     font-size: 1.2rem;
     color: var(--clr-primary);
+    margin-left: .5em;
 }
 
 .content {
@@ -32,6 +36,11 @@
     border-radius: 10px;
     aspect-ratio: 1;
     overflow: hidden;
+}
+
+.image img {
+    height: 100%;
+    object-fit: cover;
 }
 
 .text {
