responsive styling on navbar

--- a/src/components/ui/CloseBtn.module.css
+++ b/src/components/ui/CloseBtn.module.css
@@ -4,3 +4,9 @@
     background-color: transparent;
     border: 0;
 }
+
+@media (min-width: 720px) {
+    .close {
+        display: none;
+    }
+}
