--- a/src/components/layout/Navbar.module.css
+++ b/src/components/layout/Navbar.module.css
@@ -66,3 +66,51 @@
     opacity: 1;
     pointer-events: all;
 }
+
+.cart {
+    display: none;
+}
+
+@media (min-width: 720px) {
+    .nav {
+        padding: 1rem 0;
+    }
+
+    .overlay {
+        display: none;
+    }
+
+    .mobile {
+        display: none;
+    }
+
+    .links {
+        position: relative;
+        transform: unset;
+        background-color: transparent;
+        width: unset;
+        height: unset;
+        display: flex;
+        align-items: center;
+    }
+
+    .link,
+    .logout {
+        margin: 0;
+        margin-left: 1.5rem;
+        font-size: 1.2rem;
+    }
+
+    .link {
+        color: var(--clr-netural-100);
+    }
+
+    .link.active {
+        color: var(--clr-primary)
+    }
+
+    .cart {
+        margin-left: 1rem;
+        display: unset;
+    }
+}
