--- a/src/components/cart/CartList.module.css
+++ b/src/components/cart/CartList.module.css
@@ -3,6 +3,12 @@
     border-top: 1px solid var(--clr-netural-300-50);
 }
 
+.wrapper {
+    max-width: 800px;
+    margin: auto;
+    margin-bottom: 5rem;
+}
+
 .title {
     margin-bottom: .5rem;
 }
@@ -28,11 +34,6 @@
 }
 
 @media (min-width: 680px) {
-    .wrapper {
-        max-width: 800px;
-        margin: auto;
-    }
-
     .list {
         background-color: var(--clr-neutral-700);
         padding: .5rem 1.5rem;
